--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ Last Update: Feb 22, 2019
 /* Import Fonts & All CSS */
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700");
 @import url(css/bootstrap.min.css);
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
 @import url(css/animate.css);
 @import url(css/default-assets/classy-nav.css);
 @import url(css/owl.carousel.min.css);
@@ -46,7 +47,7 @@ Last Update: Feb 22, 2019
   padding: 0; }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 400;
   font-size: 16px;
   position: relative;
@@ -57,7 +58,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   color: #252525;
   line-height: 1.1;
   font-weight: 600; }
@@ -97,6 +98,10 @@ ul {
     margin: 0;
     padding: 0; }
 
+p2 {
+	text-align: left; }
+
+
 .bg-overlay {
   position: relative;
   z-index: 1; }
@@ -127,6 +132,8 @@ ul {
     width: 100%;
     height: 100%;
     z-index: -1; }
+
+
 
 .mfp-image-holder .mfp-close,
 .mfp-iframe-holder .mfp-close {
@@ -269,7 +276,7 @@ input:required {
 
 .section-padding-80 {
   padding-top: 25px;
-  padding-bottom: 80px; }
+  padding-bottom: 10px; }
 
 .section-padding-0-80 {
   padding-top: 0;
@@ -1494,10 +1501,12 @@ input:required {
 /* :: 15.0 Gallery CSS */
 .alime-portfolio-area {
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  background-color: #fff100;   }
   .alime-portfolio-area .container-fluid {
     padding-right: 10%;
-    padding-left: 10%; }
+    padding-left: 10%;
+	background-color: #fff100; }
     @media only screen and (min-width: 992px) and (max-width: 1199px) {
       .alime-portfolio-area .container-fluid {
         padding-right: 5%;
